# PsycCalc-NEO-PI-R-Professional-Assessment-Suite

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
neo_pir_omr/: __init__.py  cli.py
neo_pir_omr/core/: logging_conf.py  security.py
neo_pir_omr/docs/: ARCHITECTURE.md  SECURITY.md
neo_pir_omr/tests/: test_mapping.py  test_scoring_key.py
neo_pir_omr/ui/: app_streamlit.py
scripts/: run_streamlit.sh
