[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-pir-omr"
version = "1.0.0"
description = "Professional, secure and accurate OMR scanner for NEO PI-R answer sheets (human-marked)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yacine Adaoun"}]
keywords = ["OMR", "scanner", "streamlit", "opencv", "neo-pi-r"]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.7",
  "Pillow>=10.0",
  "streamlit>=1.30",
  "matplotlib>=3.7",
]

[project.scripts]
neo-pir-omr = "neo_pir_omr.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["neo_pir_omr*"]
